Create gh-pages branch via GitHub

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -7,10 +7,10 @@ body {
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 1.5;
-  color: #714302; }
+  color: #606c71; }
 
 a {
-  color: #99551d;
+  color: #1e6bb8;
   text-decoration: none; }
   a:hover {
     text-decoration: underline; }
@@ -56,8 +56,8 @@ a {
 .page-header {
   color: #fff;
   text-align: center;
-  background-color: #99551d;
-  background-image: linear-gradient(120deg, #99551d, #998a0e); }
+  background-color: #159957;
+  background-image: linear-gradient(120deg, #155799, #159957); }
 
 @media screen and (min-width: 64em) {
   .page-header {
@@ -112,7 +112,7 @@ a {
   margin-top: 2rem;
   margin-bottom: 1rem;
   font-weight: normal;
-  color: #99551d; }
+  color: #159957; }
 .main-content p {
   margin-bottom: 1em; }
 .main-content code {
@@ -169,7 +169,7 @@ a {
 .main-content blockquote {
   padding: 0 1rem;
   margin-left: 0;
-  color: #c68704;
+  color: #819198;
   border-left: 0.3rem solid #dce6f0; }
   .main-content blockquote > :first-child {
     margin-top: 0; }
@@ -230,7 +230,7 @@ a {
   font-weight: bold; }
 
 .site-footer-credits {
-  color: #c68704; }
+  color: #819198; }
 
 @media screen and (min-width: 64em) {
   .site-footer {
