--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -56,8 +56,9 @@ a {
 .page-header {
   color: #fff;
   text-align: center;
-  background-color: #99551d;
-  background-image: linear-gradient(120deg, #99551d, #998a0e); }
+  background-color: RGB(103, 72, 55);
+  /*background-image: linear-gradient(120deg,RGB(103, 72, 55),RGB(103, 72, 55)); */
+}
 
 @media screen and (min-width: 64em) {
   .page-header {
