--- a/Bower UI/Base.lproj/MainMenu.xib
+++ b/Bower UI/Base.lproj/MainMenu.xib
@@ -685,18 +685,10 @@
             <rect key="contentRect" x="335" y="390" width="639" height="359"/>
             <rect key="screenRect" x="0.0" y="0.0" width="1280" height="777"/>
             <value key="minSize" type="size" width="500" height="300"/>
-            <view key="contentView" id="EiT-Mj-1SZ">
+            <view key="contentView" id="EiT-Mj-1SZ" customClass="ColoredView" customModule="Bower_UI" customModuleProvider="target">
                 <rect key="frame" x="0.0" y="0.0" width="639" height="359"/>
                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 <subviews>
-                    <customView translatesAutoresizingMaskIntoConstraints="NO" id="KGc-4G-hLC" customClass="ColoredView" customModule="Bower_UI" customModuleProvider="target">
-                        <rect key="frame" x="-1" y="0.0" width="170" height="360"/>
-                        <userDefinedRuntimeAttributes>
-                            <userDefinedRuntimeAttribute type="color" keyPath="backgroundColor">
-                                <color key="value" red="0.99215686274509807" green="0.80000000000000004" blue="0.24705882352941178" alpha="1" colorSpace="calibratedRGB"/>
-                            </userDefinedRuntimeAttribute>
-                        </userDefinedRuntimeAttributes>
-                    </customView>
                     <customView translatesAutoresizingMaskIntoConstraints="NO" id="qLY-te-hZl" customClass="ProjectView" customModule="Bower_UI" customModuleProvider="target">
                         <rect key="frame" x="169" y="0.0" width="470" height="360"/>
                         <subviews>
@@ -1082,19 +1074,20 @@ CA
                 <constraints>
                     <constraint firstAttribute="bottom" secondItem="WUD-0m-yhs" secondAttribute="bottom" constant="33" id="0NM-9v-oI3"/>
                     <constraint firstAttribute="bottom" secondItem="bu4-Aj-KgO" secondAttribute="bottom" id="1Em-Z1-Cyr"/>
-                    <constraint firstItem="qLY-te-hZl" firstAttribute="leading" secondItem="KGc-4G-hLC" secondAttribute="trailing" id="BMG-Ey-bci"/>
                     <constraint firstItem="bu4-Aj-KgO" firstAttribute="leading" secondItem="EiT-Mj-1SZ" secondAttribute="leading" constant="62" id="BY0-Zm-Z8T"/>
                     <constraint firstItem="qLY-te-hZl" firstAttribute="leading" secondItem="WUD-0m-yhs" secondAttribute="trailing" id="CON-57-iMd"/>
                     <constraint firstItem="WUD-0m-yhs" firstAttribute="leading" secondItem="EiT-Mj-1SZ" secondAttribute="leading" constant="-1" id="DsE-La-4t4"/>
                     <constraint firstItem="WUD-0m-yhs" firstAttribute="top" secondItem="EiT-Mj-1SZ" secondAttribute="top" constant="26" id="MjC-pO-Q5t"/>
                     <constraint firstAttribute="trailing" secondItem="qLY-te-hZl" secondAttribute="trailing" id="SEa-hX-Qwn"/>
                     <constraint firstItem="qLY-te-hZl" firstAttribute="leading" secondItem="bu4-Aj-KgO" secondAttribute="trailing" constant="67" id="Ybd-3U-4pk"/>
-                    <constraint firstAttribute="bottom" secondItem="KGc-4G-hLC" secondAttribute="bottom" id="bG9-Oc-eSK"/>
-                    <constraint firstItem="KGc-4G-hLC" firstAttribute="top" secondItem="EiT-Mj-1SZ" secondAttribute="top" constant="-1" id="cBM-oy-1VT"/>
                     <constraint firstItem="qLY-te-hZl" firstAttribute="top" secondItem="EiT-Mj-1SZ" secondAttribute="top" constant="-1" id="kIs-Cb-Y0m"/>
                     <constraint firstAttribute="bottom" secondItem="qLY-te-hZl" secondAttribute="bottom" id="sj7-Gc-AAA"/>
-                    <constraint firstItem="KGc-4G-hLC" firstAttribute="leading" secondItem="EiT-Mj-1SZ" secondAttribute="leading" constant="-1" id="vEn-Rw-vM9"/>
                 </constraints>
+                <userDefinedRuntimeAttributes>
+                    <userDefinedRuntimeAttribute type="color" keyPath="backgroundColor">
+                        <color key="value" red="0.99215686270000003" green="0.80000000000000004" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
+                    </userDefinedRuntimeAttribute>
+                </userDefinedRuntimeAttributes>
             </view>
             <point key="canvasLocation" x="203.5" y="204.5"/>
         </window>
